--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1 class="reveal-text">AI-Powered Browser Automation.<br>Zero Code Required</h1>
-                <p class="reveal-text">Automate web scraping, data extraction, and repetitive browser tasks with intelligent AI assistance. Schedule automations, export data, and manage complex workflows—all without writing a single line of code.</p>
+                <p class="reveal-text">Automate web scraping, data extraction, and repetitive browser tasks with intelligent AI assistance. Schedule automations, export data, and manage complex workflows— <strong>FREE</strong> & <strong>NO Limits!</strong> </p>
                 <div class="reveal-text">
                     <a href="download.php" class="primary-button">
                         <i class="fa-solid fa-download"></i>
@@ -217,7 +217,7 @@
                 <div class="step fade-in-element active">
                     <div class="step-number">1</div>
                     <div class="step-content">
-                        <h3>Download & Connect AI</h3>
+                        <h3>Download & Configure</h3>
                         <p>Download Selenix and optionally connect your AI API key for intelligent automation assistance. The AI can access your browser context, logs, and workspace.</p>
                     </div>
                 </div>
@@ -225,7 +225,7 @@
                     <div class="step-number">2</div>
                     <div class="step-content">
                         <h3>Create with AI Assistance</h3>
-                        <p>Use our built-in AI assistant to create automations by describing what you want in plain English. The AI understands your browser, suggests optimal selectors, and helps debug issues in real-time.</p>
+                        <p>Use our built-in AI assistant to create automations by describing what you want in plain English. The AI understands your browser, suggests optimal selectors, and helps debug issues in real-time. Choose from <a href="./docs/index.html#command-reference" style="color: #667eea; text-decoration: none; font-weight: 600;">over 135 automation commands</a> for complete browser control.</p>
                     </div>
                 </div>
                 <div class="step fade-in-element active">
@@ -286,7 +286,7 @@
                     <i class="fa-solid fa-download"></i>
                     Download Selenix + License
                 </a>
-                <p class="license-info" style="margin-top: 15px; font-size: 14px; color: #666;">
+                <p class="license-info" style="margin-top: 15px; font-size: 14px; color: #d1d1d1;">
                     <i class="fa-solid fa-brain"></i>
                     Your download includes AI assistant access and a secure 1-year license key
                 </p>
