--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div id="navbar-container"></div>
 
     <section class="hero">
-        <div class="container">
+        <div class="hero-container">
             <div class="hero-content">
                 <h1 class="reveal-text">AI-Powered Browser Automation.<br>Zero Code Required</h1>
                 <p class="reveal-text">Automate web scraping, data extraction, and repetitive browser tasks with intelligent AI assistance. Schedule automations, export data, and manage complex workflows— <strong>FREE</strong> & <strong>NO Limits!</strong> </p>
@@ -115,7 +115,15 @@
                 </p>
             </div>
             <div class="hero-image reveal-text">
-                <img src="https://via.placeholder.com/600x400" alt="Selenix AI Browser Automation">
+                <div class="video-container">
+                    <iframe 
+                        src="https://www.youtube.com/embed/C34XWmNgYmc?autoplay=1&mute=1&controls=1&rel=0&modestbranding=1&loop=1&playlist=C34XWmNgYmc" 
+                        title="Selenix AI Browser Automation Demo" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        allowfullscreen>
+                    </iframe>
+                </div>
                 <div class="floating-card card-1">
                     <i class="fa-solid fa-brain"></i>
                     <span>AI Assistant</span>
