--- a/support/index.html
+++ b/support/index.html
@@ -25,13 +25,13 @@
             <div class="hero-content">
                 <h1>We're Here to Help</h1>
                 <p>Get the support you need to succeed with Selenix. From quick answers to detailed guidance, we've got you covered.</p>
-                <div class="hero-search">
+                <!-- <div class="hero-search">
                     <div class="search-container">
                         <i class="fa-solid fa-magnifying-glass"></i>
                         <input type="text" placeholder="Search for help articles, tutorials, or common issues...">
                         <button type="submit">Search</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -74,7 +74,7 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <h2>Get in Touch</h2>
-                    <p>Can't find what you're looking for? Send us a message and we'll get back to you within 24 hours.</p>
+                    <p>Can't find what you're looking for? Send us a message and we'll get back to you within the parameters of the Service Level Agreement.</p>
                     
                     <div class="contact-details">
                         <div class="contact-item">
