--- a/pricing/index.html
+++ b/pricing/index.html
@@ -149,6 +149,7 @@
                             <li><i class="fa-solid fa-times"></i> Priority email support</li>
                             <li><i class="fa-solid fa-times"></i> Template installation help</li>
                             <li><i class="fa-solid fa-times"></i> Custom template development</li>
+                            <li><i class="fa-solid fa-times"></i> Advanced integrations</li>
                         </ul>
                     </div>
                     <div class="plan-cta">
