--- a/pricing/index.html
+++ b/pricing/index.html
@@ -194,10 +194,12 @@
                         </table>
                     </div>
                     <div class="plan-cta">
-                        <a href="#contact" class="plan-button professional-button">
-                            <i class="fa-solid fa-rocket"></i>
-                            Get Professional Support
-                        </a>
+                        <div id="paypal-button-container-monthly" class="paypal-container monthly">
+                            <!-- Monthly PayPal button will be rendered here -->
+                        </div>
+                        <div id="paypal-button-container-yearly" class="paypal-container yearly hidden">
+                            <!-- Yearly PayPal button will be rendered here -->
+                        </div>
                         <p class="support-note">Cancel anytime • No contracts</p>
                     </div>
                 </div>
