--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <p>The browser state snapshots are incredible - I can save my login sessions and complex page states, then restore them instantly across different scraping runs. The scheduling feature means my data collection runs automatically every morning.</p>
                     <p>With the advanced data export features, I can scrape pricing information, transform it with AI processing, and have it automatically exported to CSV for my business analysis. Over the course of my first month, Selenix saved me over <span class="counter" data-target="3800">0</span> minutes (~63hrs) of manual data collection work."</p>
                     <div class="testimonial-author">
-                        <img src="https://via.placeholder.com/50" alt="Alex Chen" class="author-avatar">
+                        <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=50&h=50&fit=crop&crop=face&auto=format&q=80" alt="Alex Chen" class="author-avatar">
                         <div>
                             <p class="author-name">Alex Chen</p>
                             <p class="author-title">Business Intelligence Analyst</p>
@@ -202,7 +202,7 @@
                     <p>The structured data extraction feature is phenomenal - I can map multiple fields from complex web pages using simple JSON configurations. The AI even helps me optimize the selectors when sites change their structure!</p>
                     <p>Now I schedule my automations to run overnight, and wake up to find all my data neatly organized in CSV files. What used to take me an entire week now runs automatically in under 30 minutes!"</p>
                     <div class="testimonial-author">
-                        <img src="https://via.placeholder.com/50" alt="Sarah Johnson" class="author-avatar">
+                        <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=50&h=50&fit=crop&crop=face&auto=format&q=80" alt="Sarah Johnson" class="author-avatar">
                         <div>
                             <p class="author-name">Sarah Johnson</p>
                             <p class="author-title">Market Research Specialist</p>
