--- a/product/professional-services/index.html
+++ b/product/professional-services/index.html
@@ -519,8 +519,8 @@
                         <form id="contact-form" method="POST" action="contact-handler.php">
                             <div class="form-row">
                                 <div class="form-group">
-                                    <label for="name">Name *</label>
-                                    <input type="text" id="name" name="name" required>
+                                    <label for="name">Name</label>
+                                    <input type="text" id="name" name="name">
                                     <div class="error-message"></div>
                                 </div>
                                 <div class="form-group">
@@ -535,12 +535,6 @@
                             <div class="form-group">
                                 <label for="automation_type">What do you want to automate? *</label>
                                 <textarea id="automation_type" name="automation_type" required placeholder="Describe the automation you need (e.g., price monitoring, lead generation, data extraction, etc.)"></textarea>
-                                <div class="error-message"></div>
-                            </div>
-                            
-                            <div class="form-group">
-                                <label for="target_websites">Target Website(s) *</label>
-                                <textarea id="target_websites" name="target_websites" required placeholder="List the websites you want to automate (e.g., amazon.com, competitor sites, etc.)"></textarea>
                                 <div class="error-message"></div>
                             </div>
                             
