--- a/product/professional-services/index.html
+++ b/product/professional-services/index.html
@@ -516,7 +516,7 @@
                         
                         <div id="contact-form-messages"></div>
                         
-                        <form id="contact-form" method="POST" action="contact-handler.php">
+                        <form id="professional-services-form" method="POST" action="contact-handler.php">
                             <div class="form-row">
                                 <div class="form-group">
                                     <label for="name">Name</label>
