--- a/index.html
+++ b/index.html
@@ -294,6 +294,10 @@
                     <i class="fa-solid fa-download"></i>
                     Download Selenix + License
                 </a>
+                      <a href="../professional-services/#contact-form" class="secondary-button">
+                            <i class="fa-solid fa-envelope"></i>
+                            Request Assistance
+                        </a>
                 <p class="license-info" style="margin-top: 15px; font-size: 14px; color: #d1d1d1;">
                     <i class="fa-solid fa-brain"></i>
                     Your download includes AI assistant access and a secure 1-year license key
