--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <i class="fa-solid fa-download"></i>
                     Download Selenix + License
                 </a>
-                      <a href="../professional-services/#contact-form" class="secondary-button">
+                      <a href="../product/professional-services/#contact-form" class="secondary-button">
                             <i class="fa-solid fa-envelope"></i>
                             Request Assistance
                         </a>
