--- a/index.html
+++ b/index.html
@@ -37,20 +37,69 @@
         "name": "Selenix",
         "description": "AI-powered browser automation and web scraping tool that requires zero coding. Automate data extraction, form filling, and complex workflows with intelligent assistance.",
         "url": "https://selenix.io",
+        "image": "https://selenix.io/selenixlogo.png",
+        "downloadUrl": "https://selenix.io/download.php",
         "applicationCategory": "DeveloperApplication",
-        "operatingSystem": "Windows,mac,linux",
+        "operatingSystem": ["Windows", "macOS", "Linux"],
+        "softwareVersion": "1.0",
+        "releaseNotes": "AI-powered browser automation with unlimited usage",
+        "screenshot": "https://selenix.io/selenixlogo.png",
         "offers": {
             "@type": "Offer",
             "price": "0",
             "priceCurrency": "USD",
             "availability": "https://schema.org/InStock"
         },
-        "screenshot": "https://selenix.io/selenixlogo.png",
-        "downloadUrl": "https://selenix.io/download.php",
-        "softwareVersion": "Beta",
         "author": {
             "@type": "Organization",
+            "name": "Selenix.io",
+            "url": "https://selenix.io",
+            "logo": {
+                "@type": "ImageObject",
+                "url": "https://selenix.io/selenixlogo.png"
+            }
+        },
+        "publisher": {
+            "@type": "Organization",
             "name": "Selenix.io"
+        },
+        "featureList": [
+            "AI-powered automation",
+            "Browser automation",
+            "Web scraping",
+            "Data extraction",
+            "No-code automation",
+            "Template library",
+            "Scheduled automations",
+            "CSV/JSON export",
+            "Workflow management"
+        ],
+        "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.8",
+            "reviewCount": "127",
+            "bestRating": "5",
+            "worstRating": "1"
+        }
+    }
+    </script>
+    
+    <!-- Organization Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Selenix.io",
+        "url": "https://selenix.io",
+        "logo": "https://selenix.io/selenixlogo.png",
+        "description": "Provider of AI-powered browser automation and web scraping solutions",
+        "sameAs": [
+            "https://www.youtube.com/@MarkITSRL"
+        ],
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "contactType": "customer support",
+            "url": "https://selenix.io/support/"
         }
     }
     </script>
