--- a/product/no-code-builder/index.html
+++ b/product/no-code-builder/index.html
@@ -36,8 +36,10 @@
         "@type": "SoftwareApplication",
         "name": "Selenix No-Code Builder",
         "description": "Visual drag-and-drop interface for creating browser automations without programming. Features point & click automation, conditional logic, and real-time preview.",
+        "url": "https://selenix.io/product/no-code-builder/",
+        "image": "https://selenix.io/selenixlogo.png",
         "applicationCategory": "DeveloperApplication",
-        "operatingSystem": "Windows",
+        "operatingSystem": ["Windows", "macOS", "Linux"],
         "offers": {
             "@type": "Offer",
             "price": "0",
@@ -47,6 +49,11 @@
         "screenshot": "https://selenix.io/selenixlogo.png",
         "author": {
             "@type": "Organization",
+            "name": "Selenix.io",
+            "url": "https://selenix.io"
+        },
+        "publisher": {
+            "@type": "Organization",
             "name": "Selenix.io"
         },
         "featureList": [
@@ -55,8 +62,18 @@
             "Pre-built Components",
             "Real-time Preview",
             "Conditional Logic",
-            "Loops & Iterations"
-        ]
+            "Loops & Iterations",
+            "Visual Workflow Editor",
+            "No Programming Required"
+        ],
+        "isPartOf": {
+            "@type": "SoftwareApplication",
+            "name": "Selenix",
+            "url": "https://selenix.io"
+        },
+        "applicationSubCategory": "Visual Programming Tool",
+        "softwareRequirements": "Modern web browser",
+        "permissions": "No special permissions required"
     }
     </script>
     <link rel="stylesheet" href="../../styles.css">
