--- a/product/release-notes/index.html
+++ b/product/release-notes/index.html
@@ -412,7 +412,7 @@
         <div class="container">
             <div class="summary-stats">
                 <div class="stat-item">
-                    <div class="stat-number">v1.5.0</div>
+                    <div class="stat-number">v4.0.1-beta.18</div>
                     <div class="stat-label">Latest Version</div>
                 </div>
                 <div class="stat-item">
@@ -424,7 +424,7 @@
                     <div class="stat-label">Commands</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">6</div>
+                    <div class="stat-number">7</div>
                     <div class="stat-label">Releases</div>
                 </div>
             </div>
@@ -440,12 +440,52 @@
 
             <div class="releases-timeline">
 
-                <!-- v1.5.0 -->
+                <!-- v4.0.1-beta.18 -->
                 <div class="release-item latest">
                     <div class="release-badge">Latest</div>
                     <div class="release-header">
                         <div class="release-version">
-                            <h3>Version 1.5.0</h3>
+                            <h3>Version 4.0.1-beta.18</h3>
+                            <span class="release-date">February 27, 2026</span>
+                        </div>
+                        <div class="release-type major">Major Release</div>
+                    </div>
+                    <div class="release-content">
+                        <div class="release-section">
+                            <h4><i class="fa-solid fa-plus"></i> New Features</h4>
+                            <ul class="feature-list">
+                                <li><strong>Auto-Run Workflow</strong> - Fully automated test generation loop: describe what you want, and the AI generates commands, runs the test, verifies the result, and fixes any failures — up to 5 iterations with no manual intervention</li>
+                                <li><strong>MCP Server (Claude Desktop Integration)</strong> - Connect Claude Desktop to Selenix via the Model Context Protocol. Control Selenix from Claude's chat interface with access to all 18 automation tools — screenshots, page HTML, test management, command execution, and more. Install via <code>npm install -g @selenix/mcp-server</code></li>
+                                <li><strong>Auto-Run Verification</strong> - After a test passes, the AI takes a screenshot and verifies the output actually matches your original request, catching issues like wrong pages, 404 errors, or incorrect data</li>
+                                <li><strong>Targeted Fix Commands</strong> - AI can apply surgical fixes to specific commands by index (update, remove, insert) instead of regenerating the entire test, making fix iterations faster and more precise</li>
+                            </ul>
+                        </div>
+                        <div class="release-section">
+                            <h4><i class="fa-solid fa-wrench"></i> Improvements</h4>
+                            <ul class="improvement-list">
+                                <li>MCP bridge server starts after session is fully initialized, preventing premature tool calls</li>
+                                <li>Bridge client re-reads connection config on every call, so restarting Selenix does not require restarting Claude Desktop</li>
+                                <li>Command list now returns both camelCase identifiers and display names, preventing "Unknown command" errors from external clients</li>
+                                <li>Auto-Run status bar with color-coded states (blue=running, green=success, red=failed) and real-time phase/iteration display</li>
+                                <li>MCP server bundled as a single file (1.4MB) with no external dependencies for easy distribution</li>
+                            </ul>
+                        </div>
+                        <div class="release-section">
+                            <h4><i class="fa-solid fa-bug"></i> Bug Fixes</h4>
+                            <ul class="bugfix-list">
+                                <li>Fixed <code>run_test</code> bridge endpoint hanging after test failure due to missing playback state transition</li>
+                                <li>Fixed <code>get_command_list</code> returning display names instead of camelCase identifiers, causing "Unknown command" errors</li>
+                                <li>Fixed selector sanitization for AI-generated Playwright-style pseudo-selectors converting to valid XPath alternatives</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- v4.0.1-beta.17 -->
+                <div class="release-item">
+                    <div class="release-header">
+                        <div class="release-version">
+                            <h3>Version 4.0.1-beta.17</h3>
                             <span class="release-date">February 26, 2026</span>
                         </div>
                         <div class="release-type major">Major Release</div>
@@ -468,11 +508,11 @@
                     </div>
                 </div>
 
-                <!-- v1.4.0 -->
+                <!-- v4.0.1-beta.16 -->
                 <div class="release-item">
                     <div class="release-header">
                         <div class="release-version">
-                            <h3>Version 1.4.0</h3>
+                            <h3>Version 4.0.1-beta.16</h3>
                             <span class="release-date">July 13, 2025</span>
                         </div>
                         <div class="release-type minor">Minor Release</div>
@@ -502,11 +542,11 @@
                     </div>
                 </div>
 
-                <!-- v1.3.0 -->
+                <!-- v4.0.1-beta.15 -->
                 <div class="release-item">
                     <div class="release-header">
                         <div class="release-version">
-                            <h3>Version 1.3.0</h3>
+                            <h3>Version 4.0.1-beta.15</h3>
                             <span class="release-date">May 29, 2025</span>
                         </div>
                         <div class="release-type major">Major Release</div>
@@ -538,11 +578,11 @@
                     </div>
                 </div>
 
-                <!-- v1.2.0 -->
+                <!-- v4.0.1-beta.14 -->
                 <div class="release-item">
                     <div class="release-header">
                         <div class="release-version">
-                            <h3>Version 1.2.0</h3>
+                            <h3>Version 4.0.1-beta.14</h3>
                             <span class="release-date">April 13, 2025</span>
                         </div>
                         <div class="release-type major">Major Release</div>
@@ -582,11 +622,11 @@
                     </div>
                 </div>
 
-                <!-- v1.1.0 -->
+                <!-- v4.0.1-beta.13 -->
                 <div class="release-item">
                     <div class="release-header">
                         <div class="release-version">
-                            <h3>Version 1.1.0</h3>
+                            <h3>Version 4.0.1-beta.13</h3>
                             <span class="release-date">March 25, 2025</span>
                         </div>
                         <div class="release-type major">Major Release</div>
@@ -622,11 +662,11 @@
                     </div>
                 </div>
 
-                <!-- v1.0.0 -->
+                <!-- v4.0.1-beta.12 -->
                 <div class="release-item">
                     <div class="release-header">
                         <div class="release-version">
-                            <h3>Version 1.0.0</h3>
+                            <h3>Version 4.0.1-beta.12</h3>
                             <span class="release-date">March 14, 2025</span>
                         </div>
                         <div class="release-type major">Initial Release</div>
@@ -690,9 +730,9 @@
 
                 <div class="roadmap-item">
                     <div class="roadmap-status in-development">In Development</div>
-                    <h3>Enhanced AI Workflows</h3>
-                    <p>Expanded AI capabilities including automatic test generation from natural language descriptions and intelligent test repair when selectors break.</p>
-                    <div class="roadmap-eta">Expected: Q2 2026</div>
+                    <h3>Cloud Execution</h3>
+                    <p>Run your Selenix tests in the cloud without a local browser. Schedule and monitor runs from anywhere with results synced to your project.</p>
+                    <div class="roadmap-eta">Expected: Q3 2026</div>
                 </div>
 
                 <div class="roadmap-item">
